fix: center icon on firefox

--- a/packages/shared/styles/components/atoms/SfButton.scss
+++ b/packages/shared/styles/components/atoms/SfButton.scss
@@ -5,6 +5,7 @@
   width: var(--button-size, var(--button-width));
   height: var(--button-size, var(--button-height));
   display: flex;
+  align-items: center;
   justify-content: center;
   padding: var(--button-padding, var(--spacer-sm) calc(var(--spacer-sm) * 2));
   color: var(--button-color, var(--c-light-variant));
